# Networking

file_transfer_client/: .gitignore  README.md  tcp_file_transfer_client.pro
file_transfer_client/include/: client.h
file_transfer_client/src/: client.cpp  main.cpp
file_transfer_server/: README.md  tcp_file_transfer_server  tcp_file_transfer_server.pro
file_transfer_server/include/: server.h
file_transfer_server/src/: main.cpp  server.cpp
http_server/include/: http_acceptor.hpp  http_server.hpp  http_service.hpp
http_server/src/: http_acceptor.cpp  http_server.cpp  http_service.cpp  main.cpp
http_server_redis/: CMakeLists.txt  README.md
http_server_redis/include/: http_service.hpp
http_server_redis/src/: http_service.cpp
